# bun-py-mono-template

./: README.md
apps/backend/: README.md  justfile  pyproject.toml
apps/backend/src/app/: config.py  main.py
apps/frontend/: README.md
