[project]
name = "bun-py-backend"
version = "0.1.0"
description = "FastAPI Backend for Monorepo"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]>=0.123.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "mkdocs-material>=9.7.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

# [linting]
[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# [typing]
[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = ["tests", "docs"]
mypy_path = "src"

# [testing]
[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

# [coverage]
[tool.coverage.run]
source = ["src/app"]
branch = true
omit = ["tests/*", "*/__init__.py"]
data_file = ".coverage_cache/.coverage"

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = ".coverage_cache/html"

# [release]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
